--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
     = endblock
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     {% set navigation_bar = [
         ('/', 'home', 'Home'),
         ('/worldmap/', 'worldmap', 'World Map'),
