--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,8 +13,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     {% set navigation_bar = [
         ('/', 'home', 'Home'),
-        ('/worldmap/', 'worldmap', 'World Map'),
-        ('/countrystats/', 'countrystats', 'Country Stats')
+        ('/worldmap', 'worldmap', 'World Map'),
+        ('/countrystats', 'countrystats', 'Country Stats')
     ] %}
     = set active_page = active_page|default('home')
       <a class="navbar-brand" href="#">World Cup Stats</a>
