--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,8 @@
     {% set navigation_bar = [
         ('/', 'home', 'Home'),
         ('/worldmap', 'worldmap', 'World Map'),
-        ('/countrystats', 'countrystats', 'Country Stats')
+        ('/countrystats', 'countrystats', 'Country Stats'),
+        ('/worldcups','worldcups', 'World Cups')
     ] %}
     = set active_page = active_page|default('home')
       <a class="navbar-brand" href="#">World Cup Stats</a>
