Functions to pull from DB year and overall

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,9 @@
         ('/', 'home', 'Home'),
         ('/worldmap', 'worldmap', 'World Map'),
         ('/countrystats', 'countrystats', 'Country Stats'),
-        ('/worldcups','worldcups', 'World Cups')
+        ('/worldcups','worldcups', 'World Cups'),
+        ('/wins_year','wins_year','Wins by Year'),
+        ('/wins_overall','wins_overall','Wins Overall')
     ] %}
     = set active_page = active_page|default('home')
       <a class="navbar-brand" href="#">World Cup Stats</a>
