--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,8 @@
         ('/countrystats', 'countrystats', 'Country Stats'),
         ('/worldcups','worldcups', 'World Cups'),
         ('/wins_year','wins_year','Wins by Year'),
-        ('/wins_overall','wins_overall','Wins Overall')
+        ('/wins_overall','wins_overall','Wins Overall'),
+        ('/country_information','country_information','Country Information')
     ] %}
     = set active_page = active_page|default('home')
       <a class="navbar-brand" href="#">World Cup Stats</a>
