--- a/templates/country_year_information.html
+++ b/templates/country_year_information.html
@@ -2,7 +2,7 @@
 = set active_page = "home"
 
 = block title
-Country Information
+Wins per Year
 = endblock
 
 = block head
@@ -12,20 +12,29 @@ Country Information
 
 
 = block content
-<div class="container">
-	<div class="jumbotron text-center">
-  	 <h1>Country Information</h1>
-	  <form action="/country_information" method="GET">
-	  	<div class="form-group">
-	  		<label class="col-form-label" for="country">Country</label>
-	  		<div id="countries" class="scrollable-dropdown-menu">
-	  			<input class="form-control typeahead" type="text" name="country" value="{{ country }}" placeholder="Country">
-	  		</div>
-	  	</div>
-	  	<button class="btn btn-primary">Search</button>
+
+
+  <div class="container">
+  	<div class="jumbotron text-center">
+  	 <h1>Country Information By Year</h1>
+	  <form action="/country_year" method="GET">
+	  	<div class="row text-center">
+	  		<div class="col-sm-3 offset-sm-3">
+		  		<label for="country">Country</label>
+		  		<div id="countries" class="scrollable-dropdown-menu">
+		  			<input class="form-control typeahead" type="text" name="country" value="{{ country }}" placeholder="Country">
+		  		</div>
+		  	</div>
+			<div class="col-sm-3">
+		  		<label for="year">Year</label>
+		  		<div id="years" class="scrollable-dropdown-menu">
+		  			<input class="form-control typeahead" type="text" name="year" value="{{ year }}" placeholder="Year">
+		  		</div>
+		  	</div>
+		</div>
+	  		<button class="btn btn-primary">Search</button>
 	  </form>
 	</div>
-  <div class="container">
   	<div class="row">
 	  	<table class="table table-striped">
 
@@ -33,9 +42,13 @@ Country Information
 	    	<thead>
 	          <tr>
 	            <th>Country</th>
-	            <th>Continent</th>
-	            <th>Land Area (km^2)</th>
-	            <th>Border Length (km)</th>
+	            <th>Country Code</th>
+	            <th>Year</th>
+	            <th>GDP</th>
+	            <th>Population</th>
+	            <th>Life Expectancy</th>
+	            <th>Urbanization Percentage</th>
+	            <th>Per Capita GDP</th>
 	          </tr>
 	        </thead>
 	        <tbody>
@@ -46,6 +59,10 @@ Country Information
 	                    <td>{{ record[1] }}</td>
 	                    <td>{{ record[2] }}</td>
 	                    <td>{{ record[3] }}</td>
+	                    <td>{{ record[4] }}</td>
+	                    <td>{{ record[5] }}</td>
+	                    <td>{{ record[6] }}</td>
+	                    <td>{{ record[7] }}</td>
 	                </tr>
 
 	            {% endfor %}
@@ -55,12 +72,12 @@ Country Information
 	    </table>
 	  </div>
   </div>
-</div>
 	  
 = endblock
 
 
 = block footer
+
 <script src="/static/js/typeahead.bundle.js"></script>
 
 
@@ -89,12 +106,28 @@ Country Information
 	};
 	var countries = ['Algeria', 'Angola', 'Argentina', 'Australia', 'Austria', 'Belgium', 'Bolivia', 'Bosnia and Herzegovina', 'Brazil', 'Bulgaria', 'Cameroon', 'Canada', 'Chile', 'China', 'Colombia', 'Costa Rica', 'Croatia', 'Cuba', 'Democratic Republic of the Congo', 'Denmark', 'Ecuador', 'Egypt', 'El Salvador', 'France', 'Germany', 'Ghana', 'Greece', 'Haiti', 'Honduras', 'Hungary', 'Iceland', 'Iran', 'Iraq', 'Ireland', 'Israel', 'Italy', 'Ivory Coast', 'Jamaica', 'Japan', 'Kuwait', 'Mexico', 'Morocco', 'Netherlands', 'New Zealand', 'Nigeria', 'North Korea', 'Norway', 'Panama', 'Paraguay', 'Peru', 'Poland', 'Portugal', 'Qatar', 'Romania', 'Saudi Arabia', 'Senegal', 'Slovakia', 'Slovenia', 'South Africa', 'South Korea', 'Spain', 'Sweden', 'Switzerland', 'Togo', 'Trinidad and Tobago', 'Tunisia', 'Turkey', 'Ukraine', 'United Arab Emirates', 'United States', 'Uruguay'];
 
+	var years = ['1960', '1961', '1962', '1963', '1964', '1965', '1966', '1967', '1968', '1969', '1970', '1971', '1972', '1973', '1974', '1975', '1976', '1977', '1978', '1979', '1980', '1981', '1982', '1983', '1984', '1985', '1986', '1987', '1988', '1989', '1990', '1991', '1992', '1993', '1994', '1995', '1996', '1997', '1998', '1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016'];
 	$('#countries .typeahead').typeahead(null, {
 	  name: 'countries',
 	  limit: 100,
 	  source: substringMatcher(countries)
 	});
-
+	$('#years .typeahead').typeahead(null, {
+	  name: 'year',
+	  limit: 100,
+	  source: substringMatcher(years)
+	});
+	// $('#scrollable-dropdown-menu .typeahead').typeahead(null,{
+	//   hint: true,
+	//   highlight: true,
+	//   minLength: 1
+	// },
+	// {
+	//   name: 'states',
+	//   source: substringMatcher(states)
+	// });
 
 </script>
+
+
 = endblock
