--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,8 @@
         ('/worldcups','worldcups', 'World Cups'),
         ('/wins_year','wins_year','Wins by Year'),
         ('/wins_overall','wins_overall','Wins Overall'),
-        ('/country_information','country_information','Country Information')
+        ('/country_information','country_information','Country Information'),
+        ('/country_year','country_year','Country by Year')
     ] %}
     = set active_page = active_page|default('home')
       <a class="navbar-brand" href="#">World Cup Stats</a>
